--- a/styles/nicole_jette.css
+++ b/styles/nicole_jette.css
@@ -14,6 +14,7 @@
     width: 100%;
     text-align: center;
     color: var(--pappe);
+    font-family: "TrashHand";
     /* right: 7.5%; */
 }
 
@@ -62,15 +63,17 @@
   text-align: center;
   position: relative;
 }
-#textContainer > .item > .text > div {
+#textContainer > .item > .text > .content {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
   padding: 1cm;
+  max-height: 80%;
 }
-#textContainer > .item > .text > div > h3 {
-  font-size: 3em;
+#textContainer > .item > .text > .content h3 {
+  font-size: 2em;
+  font-family: "TrashHand";
 }
 
 #textContainer > .item img {
