--- a/styles/rezepte.css
+++ b/styles/rezepte.css
@@ -44,15 +44,16 @@
   background-color: var(--pappe);
   width: 90%;
   margin: 0 auto;
-  max-height: 25vh;
-  transition: all 2s;
+  transform: scaleY(1);
+  transform-origin: top;
+  transition: transform 2s;
   /* transition: padding 2s; */
   overflow: hidden;
   text-align: center;
   padding: 1cm;
 }
 #textExpand.closed {
-  max-height: 0;
+  transform: scaleY(0);
   padding: 0;
 }
 
@@ -105,6 +106,7 @@ p {
   margin-top: 20%;
   font-weight: 300;
   font-family: "TrashHand";
+
 }
 #recipeContainer > .recipe > div > a {
   padding: 1vmin;
@@ -123,6 +125,7 @@ p {
 }
 #recipeContainer > .recipe > div > a > span {
   font-family: "TrashHand";
+  font-style: normal;
   font-size: 4vmin;
 }
 #recipeContainer > .recipe > div > a:hover {
@@ -133,10 +136,11 @@ p {
   /* border-color: #111; */
 }
 #recipeContainer > .recipe > div > .tags {
-  position: absolute;
-  bottom: 0;
+  /* position: absolute;
+  bottom: 20px;
   left: 0;
-  right: 0;
+  right: 0; */
+  padding-top: 10%;
   display: flex;
   justify-content: center;
   flex-direction: row;
