--- a/styles/geschichten.css
+++ b/styles/geschichten.css
@@ -36,8 +36,9 @@
   background-color: var(--pappe);
   width: 90%;
   margin: 0 auto;
-  max-height: 25vh;
-  transition: all 2s;
+  transform: scaleY(1);
+  transform-origin: top;
+  transition: transform 2s;
   /* transition: padding 2s; */
   overflow: hidden;
   text-align: center;
@@ -45,7 +46,7 @@
   margin-bottom: 1cm;
 }
 #textExpand.closed {
-  max-height: 0;
+  transform: scaleY(0);
   padding: 0;
 }
 
