--- a/styles/rezepte/rezept.css
+++ b/styles/rezepte/rezept.css
@@ -6,24 +6,32 @@ ul {
 
 #container {
   display: grid;
-  grid-template-columns: 2fr 3fr;
+  /* grid-template-columns: 2fr 3fr; */
+  grid-template-columns: auto 3fr;
   grid-template-rows: auto auto;
   grid-template-areas: "img zubereitung"
                                     "zutaten kommentar"
                                     "tags tags";
   margin-left: 60px;
   margin-right: 60px;
-  min-height: 80vh;
-  max-height: 100vh;
+  /* min-height: 80vh; */
+  /* max-height: 100vh; */
   grid-gap: 1vmin;
   margin-top: 2.5vmin;
 }
 
 #zubereitung {
   grid-area: zubereitung;
+  max-height: 50vh;
 }
 #zutaten {
   grid-area: zutaten;
+}
+#zutaten ul > span {
+  margin-left: -40px;
+}
+#zutaten ul > span.sectionHeader {
+  font-weight: bold;
 }
 #kommentar {
   grid-area: kommentar;
@@ -35,7 +43,7 @@ ul {
   grid-area: img;
   display: block;
   max-height: 50vh;
-  max-width: 100%;
+  /* max-width: 100%; */
   margin: 0 auto;
   /* margin-left: 40px; */
 }
