--- a/styles/index.css
+++ b/styles/index.css
@@ -41,7 +41,7 @@
   left: 0;
   right: 0;
 }
-#footer > #datenschutz-impressum, #footer > #instagram {
+#footer > #datenschutz-impressum, #footer > :is(#instagram, #facebook) {
   /* float: right; */
   color: var(--pappe);
   margin-bottom: .5vh;
@@ -50,7 +50,7 @@
   padding: 5px;
   border-radius: 5px;
 }
-#footer > #datenschutz-impressum:hover, #footer > #instagram:hover {
+#footer > #datenschutz-impressum:hover, #footer > :is(#instagram, #facebook):hover {
   color: var(--pappe_darken);
 }
 #footer > #instagram {
